# anote

./: Cargo.toml  README.md  anote.toml
migrations/2024-03-13-183525_create_tables/: down.sql  up.sql
migrations/2024-03-20-121837_rename_anime_ranking_table/: down.sql  up.sql
src/: algorithm.rs  main.rs  schema.rs  structs.rs  templates.rs
src/db/: create_pool.rs  mod.rs  models.rs
src/db/ops/: add_anime_rankings.rs  add_animes.rs  add_cached_genre_combo.rs  add_genre_combo.rs  get_genre_combo_with_rankings.rs  mod.rs  update_anime_rankings.rs
src/routes/: get_user_recs.rs  mod.rs  root.rs
src/training/: mod.rs  train.rs
src/utils/: filter_watched_animes.rs  get_config.rs  get_user_al.rs  mod.rs
static/: styles.css
templates/: error.html  header.html  index.html  recommendations.html
